# mirofish-forecast-

./: .env.example  .gcloudignore  .gitignore  AGENTS.md  AGENT_CONTEXT.md  CLAUDE.md  Dockerfile  Dockerfile.healthcheck  Makefile  README.md  docker-compose.yml  eval.py  gunicorn.conf.py  pyproject.toml  test_err.txt  test_out.txt
.github/workflows/: ci.yml  deploy.yml
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue
frontend/src/assets/: main.css
frontend/src/components/: AnalogCard.vue  AnalogLightbox.vue
frontend/src/components/agents/: AgentPanel.vue
frontend/src/components/chart/: PriceChart.vue  usePriceData.ts
frontend/src/components/chat/: ChatContainer.vue  ChatInput.vue  (+2 more)
frontend/src/composables/: useAutoScroll.ts  useBrooksChart.ts  useForecastStream.ts
frontend/src/config/: theme.ts
frontend/src/stores/: forecastStore.ts
frontend/src/types/: chart.ts  forecast.ts  market.ts  splitpanes.d.ts  sse.ts
live-writer/: Dockerfile  deploy_writer.sh  requirements.txt  writer.py
scripts/: deploy_healthcheck.sh  extract_brooks_metadata.py  index_brooks_corpus.py  parse_brooks_corpus.py  test_brooks_retrieval.py  upload_brooks_jpgs.py
src/mirofish_forecast/: __init__.py  app.py
src/mirofish_forecast/api/: brooks_routes.py  forecast_routes.py  health.py  market_routes.py  middleware.py  ml_routes.py
src/mirofish_forecast/brooks/: __init__.py  agent_retrieval.py  embedder.py  extractor.py  parser.py  prompt_formatting.py  retriever.py
src/mirofish_forecast/calibration/: __init__.py  aci.py  bootstrap.py  cqr.py  reliability.py  tracking.py
src/mirofish_forecast/config/: constants.py  settings.py
src/mirofish_forecast/data/: __init__.py  cache.py  databento_client.py  economic_calendar.py  fear_greed_client.py  fred_client.py  ib_client.py  session_levels.py  vix_client.py  yfinance_client.py
src/mirofish_forecast/healthcheck/: __init__.py  checks.py  email_sender.py  runner.py
src/mirofish_forecast/llm/: __init__.py  client.py  schemas.py
src/mirofish_forecast/ml/: __init__.py  experiment_tracker.py  fast_path.py  feature_extractor.py  model_store.py  signal_bar.py  trainer.py
src/mirofish_forecast/models/: __init__.py  base.py  brooks.py  forecast.py  market.py  query.py  scenario.py
src/mirofish_forecast/services/: __init__.py  bar_analytics.py  data_aggregator.py  forecast_synthesizer.py  nlp_parser.py  pipeline.py  scenario_builder.py  session_context.py  simulation_runner.py  tod_regime.py
src/mirofish_forecast/utils/: aggregation.py  gcs_signing.py  logging.py
tests/: conftest.py
tests/integration/: test_forecast_routes.py  test_market_routes.py
tests/unit/: test_aci.py  test_aggregation.py  test_bar_analytics.py  test_binary_classification.py  test_bootstrap.py  test_cache.py  test_cqr.py  test_data_aggregator.py  test_databento_client.py  test_economic_calendar.py  test_experiment_tracker.py  test_fear_greed_client.py  test_feature_extractor.py  test_forecast_models.py  test_forecast_synthesizer.py  test_fred_client.py  test_ib_client.py  test_instrument_config.py  test_llm_client.py  test_ml_routes.py  test_model_store.py  test_models.py  test_nlp_parser.py  test_pipeline.py  test_reliability.py  test_routing_priority.py  test_scenario_builder.py  test_scenario_models.py  test_session_context.py  test_session_levels.py  test_signal_bar.py  test_simulation_runner.py  test_tod_regime.py  test_tracking.py  test_vix_client.py  test_yfinance_client.py
tests/unit/api/: test_brooks_chart_endpoint.py
tests/unit/brooks/: __init__.py  test_agent_retrieval.py  test_embedder.py  test_extractor.py  test_parser.py  test_prompt_formatting.py  test_retriever.py
tests/unit/healthcheck/: __init__.py  test_checks.py  test_runner.py
tests/unit/models/: test_agent_decision_cot.py
tests/unit/utils/: test_gcs_signing.py
(+21 files in other folders)
