[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mirofish-forecast"
version = "0.1.0"
description = "Natural language forecasting layer for ES futures"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0,<4.0",
    "gunicorn>=22.0,<23.0",
    "gevent>=24.0,<25.0",
    "pydantic>=2.5,<3.0",
    "pydantic-settings>=2.1,<3.0",
    "fredapi>=0.5,<1.0",
    "vix-utils>=0.1,<1.0",
    "yfinance>=0.2,<1.0",
    "requests>=2.31,<3.0",
    "upstash-redis>=1.0,<2.0",
    "python-dotenv>=1.0,<2.0",
    "fear-and-greed>=0.0.1",
    "databento>=0.40,<1.0",
    "openai>=1.0,<2.0",
    "tenacity>=8.0,<10.0",
    "aiolimiter>=1.0,<2.0",
    "numpy>=1.26,<3.0",
    "scipy>=1.12,<2.0",
    "lightgbm>=4.0,<5.0",
    "scikit-learn>=1.4,<2.0",
    "finvizfinance>=0.14,<1.0",
    "python-dateutil>=2.8,<3.0",
    "mlflow-skinny>=2.12,<3.0",
    "google-generativeai>=0.8,<1.0",
    "google-cloud-storage>=2.14,<3.0",
    "upstash-vector>=0.6,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=4.1,<6.0",
    "pytest-mock>=3.12,<4.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "httpx>=0.27,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=src/mirofish_forecast --cov-report=term-missing"
